<resources>
    <string name="app_name">Iron Train</string>
    <string name="checkForUpdates">Updates Suchen</string>
    <string name="createPlan">Plan erstellen</string>
    <string name="train">trainieren</string>
    <string name="name">Name </string>
    <string name="description">Beschreibung</string>
    <string name="save">speichern</string>
    <string name="addExercice">Übung hinzufügen</string>
    <string name="addExerciceDay">Trainingstag hinzufügen</string>
    <string name="cancel">abbrechen</string>
    <string name="title_activity_plan_list">PlanListActivity</string>
    <string name="goToPlans">zu den Plänen</string>
    <string name="noItemsFound">- Die Liste ist leer -</string>
    <string name="title_activity_edit_plan_day">EditPlanDayActivity</string>
    <string name="updateUrl">http://mirko-eberlein.de/fitnessplan.json</string>
    <string name="saveMessage">speichern erfolgreich</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="stats">Statistik</string>
    <string name="updateMessages">Übungen wurden importiert</string>
    <string name="countSet">Sätze</string>
    <string name="countWHD">Wiederholungen</string>
    <string name="startTrain">Training starten</string>
    <string name="title_activity_do_train">DoTrainActivity</string>
    <string name="weight">Gewicht</string>
    <string name="finish">Abschliessen</string>
    <string name="home">Home</string>
    <string name="plan_list">Plan Übersicht</string>
    <string name="toPlanList">zur Planliste</string>
    <string name="toPlanDay">zum Trainingstag</string>
    <string name="toPlan">zum Plan</string>
    <string name="planEditHeadline">Plan bearbeiten</string>
    <string name="firstSave">bitte zuerst speichern</string>
    <string name="fillName">Name muss gefüllt sein</string>
    <string name="plsSelect">Bitte wählen</string>
    <string name="selectPlanDay">Bitte einen Trainingstag wählen!</string>
    <string name="exerciceDisplay">Übung  %1$s von  %2$s</string>
    <string name="exerciceSetDisplay">%1$s Satz %2$s von %3$s</string>
    <string name="title_activity_stats_detail">StatsDetail</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
