<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_plan"
        android:orderInCategory="100"
        android:title="@string/goToPlans"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_train"
        android:orderInCategory="100"
        android:title="@string/train"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/checkForUpdates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="100"
        android:title="@string/stats"
        app:showAsAction="never" />
</menu>
