<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText android:id="@+id/planname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSoftGrey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"/>

    <EditText android:id="@+id/plandescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSoftGrey"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/savePlan"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/addExercice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addExerciceDay"/>
    </LinearLayout>
    <ListView android:id="@+id/trainingDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>