<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.irontrain.StatsActivity"
    tools:showIn="@layout/activity_stats">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button android:id="@+id/updateButton"
            style="@style/mainPageButtons"
            android:text="@string/checkForUpdates"/>

        <Button android:id="@+id/planListButton"
            style="@style/mainPageButtons"
            android:text="@string/goToPlans"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <Button android:id="@+id/trainButton"
            android:text="@string/train"
            style="@style/mainPageButtons"/>

        <Button android:id="@+id/statsButton"
            style="@style/mainPageButtons"
            android:text="@string/stats"/>
    </LinearLayout>
</LinearLayout>
