<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irontrain.EditPlanDayActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/labelStyle"
            android:text="@string/name"/>

        <EditText android:id="@+id/planDayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textFieldStyle"
            android:background="@color/colorSoftGrey"/>

        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText android:id="@+id/planDayDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textFieldStyle"
            android:background="@color/colorSoftGrey"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button android:id="@+id/savePlanDay"
        android:text="@string/save"
        style="@style/buttonStyle"/>
    <Button android:id="@+id/cancel"
        android:text="@string/cancel"
        style="@style/buttonStyle"  />
    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button android:id="@+id/addExercice"
        style="@style/buttonStyle"
        android:text="@string/addExercice"/>
    </LinearLayout>
    <ListView android:id="@+id/trainingExercice"
        android:listSelector="@drawable/list_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/listStyle">
    </ListView>
</LinearLayout>