<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mirko_eberlein.irontrain.EditPlanActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText android:id="@+id/planName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSoftGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText android:id="@+id/planDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSoftGrey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/savePlan"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/addExercice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addExerciceDay"/>
    </LinearLayout>
    <ListView android:id="@+id/trainingDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>