<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mirko_eberlein.irontrain.Home">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ironTrain"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <Button android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkForUpdates"
        android:textSize="16dp"/>
    <Button android:id="@+id/planListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToPlans"
        android:textSize="16dp"/>
    <Button android:id="@+id/trainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:textSize="16dp"/>
</LinearLayout>
